--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
   font-family: var(--vazir-font);
   min-height: 100vh;
   user-select: none;
