--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,110 @@ body {
   box-sizing: border-box;
   font-family: var(--vazir-font);
   min-height: 100vh;
-  user-select: none;
+  /* user-select: none; */
+}
+
+@layer base {
+  :root {
+    /* CSS LIGHT THEME PRIMARY COLORS */
+    --primary-50: 243 250 243; /* #F3FAF3 */
+    --primary-100: 228 244 231; /* #E4F4E7 */
+    --primary-200: 202 232 206; /* #CAE8CE */
+    --primary-300: 143 205 152; /* #8FCD98 */
+    --primary-400: 111 185 122; /* #6FB97A */
+    --primary-500: 75 156 87; /* #4B9C57 */
+    --primary-600: 57 128 68; /* #398044 */
+    --primary-700: 48 101 57; /* #306539 */
+    --primary-800: 42 81 49; /* #2A5131 */
+    --primary-900: 36 67 41; /* #244329 */
+    --primary-950: 15 36 19; /* #0F2413 */
+    /* CSS LIGHT THEME ORANGE COLORS */
+    --orange-50: 255 244 237; /* #fff4ed */
+    --orange-100: 255 230 213; /* #ffe6d5 */
+    --orange-200: 254 204 170; /* #feccaa */
+    --orange-300: 253 172 116; /* #fdac74 */
+    --orange-400: 251 138 60; /* #fb8a3c */
+    --orange-500: 249 115 22; /* #f97316 */
+    --orange-600: 234 103 12; /* #ea670c */
+    --orange-700: 194 87 12; /* #c2570c */
+    --orange-800: 154 74 18; /* #9a4a12 */
+    --orange-900: 124 61 18; /* #7c3d12 */
+    --orange-950: 67 32 7; /* #432007 */
+    /* CSS LIGHT THEME SURFACE COLORS */
+    --surface-50: 245 247 250; /* #F5F7FA */
+    --surface-100: 234 238 244; /* #EAEEF4 */
+    --surface-200: 208 219 231; /* #D0DBE7 */
+    --surface-300: 166 188 211; /* #A6BCD3 */
+    --surface-400: 119 153 185; /* #7799B9 */
+    --surface-500: 85 124 162; /* #557CA2 */
+    --surface-600: 66 98 135; /* #426287 */
+    --surface-700: 55 80 109; /* #37506D */
+    --surface-800: 48 69 92; /* #30455C */
+    --surface-900: 44 60 78; /* #2C3C4E */
+    --surface-950: 31 41 55; /* #1F2937 */
+    /* CSS LIGHT THEME MAIN COLORS */
+    --main-050: 250 250 250; /* #FAFAFA */
+    --main-100: 239 239 239; /* #EFEFEF */
+    --main-200: 220 220 220; /* #DCDCDC */
+    --main-300: 189 189 189; /* #BDBDBD */
+    --main-400: 152 152 152; /* #989898 */
+    --main-500: 124 124 124; /* #7C7C7C */
+    --main-600: 101 101 101; /* #656565 */
+    --main-700: 82 82 82; /* #525252 */
+    --main-800: 70 70 70; /* #464646 */
+    --main-900: 61 61 61; /* #3D3D3D */
+    --main-950: 41 41 41; /* #292929 */
+  }
+  :root[class~="dark"] {
+    /* CSS DARK THEME PRIMARY COLORS */
+    --primary-50: 15 36 19; /* #0F2413 */
+    --primary-100: 36 67 41; /* #244329 */
+    --primary-200: 42 81 49; /* #2A5131 */
+    --primary-300: 48 101 57; /* #306539 */
+    --primary-400: 57 128 68; /* #398044 */
+    --primary-500: 75 156 87; /* #4B9C57 */
+    --primary-600: 111 185 122; /* #6FB97A */
+    --primary-700: 143 205 152; /* #8FCD98 */
+    --primary-800: 202 232 206; /* #CAE8CE */
+    --primary-900: 228 244 231; /* #E4F4E7 */
+    --primary-950: 243 250 243; /* #F3FAF3 */
+    /* CSS DARK THEME ORANGE COLORS */
+    --orange-50: 67 32 7; /* #432007 */
+    --orange-100: 124 61 18; /* #7c3d12 */
+    --orange-200: 154 74 18; /* #9a4a12 */
+    --orange-300: 194 87 12; /* #c2570c */
+    --orange-400: 234 103 12; /* #ea670c */
+    --orange-500: 249 115 22; /* #f97316 */
+    --orange-600: 251 138 60; /* #fb8a3c */
+    --orange-700: 253 172 116; /* #fdac74 */
+    --orange-800: 254 204 170; /* #feccaa */
+    --orange-900: 255 230 213; /* #ffe6d5 */
+    --orange-950: 255 244 237; /* #fff4ed */
+    /* CSS DARK THEME SURFACE COLORS */
+    --surface-50: 31 41 55; /* #1F2937 */
+    --surface-100: 44 60 78; /* #2C3C4E */
+    --surface-200: 48 69 92; /* #30455C */
+    --surface-300: 55 80 109; /* #37506D */
+    --surface-400: 66 98 135; /* #426287 */
+    --surface-500: 85 124 162; /* #557CA2 */
+    --surface-600: 119 153 185; /* #7799B9 */
+    --surface-700: 166 188 211; /* #A6BCD3 */
+    --surface-800: 208 219 231; /* #D0DBE7 */
+    --surface-900: 234 238 244; /* #EAEEF4 */
+    --surface-950: 245 247 250; /* #F5F7FA */
+    /* CSS DARK THEME MAIN COLORS */
+    --main-50: 41 41 41; /* #292929 */
+    --main-100: 61 61 61; /* #3D3D3D */
+    --main-200: 70 70 70; /* #464646 */
+    --main-300: 82 82 82; /* #525252 */
+    --main-400: 101 101 101; /* #656565 */
+    --main-500: 124 124 124; /* #7C7C7C */
+    --main-600: 152 152 152; /* #989898 */
+    --main-700: 189 189 189; /* #BDBDBD */
+    --main-800: 220 220 220; /* #DCDCDC */
+    --main-900: 239 239 239; /* #EFEFEF */
+    --main-950: 250 250 250; /* #FAFAFA */
+  }
 }
 
 @layer components {
@@ -26,16 +129,16 @@ body {
     @apply absolute space-y-1 text-lg font-bold;
   }
   .cart__text--class {
-    @apply py-1 px-2 bg-[rgba(255,255,255,0.8)];
+    @apply py-1 px-2 bg-c-main-100/90;
   }
   .shadow-navbar--class {
     @apply shadow-[0px_-5px_20px_-5px_rgba(143,205,152,0.7),0px_5px_20px_-5px_rgba(143,205,152,0.7)];
   }
   .cart-container__lazy--class {
-    @apply relative rounded-3xl bg-slate-400/40 animate-pulse;
+    @apply relative rounded-3xl bg-c-primary-400/40 animate-pulse;
   }
   .cart__lazy--class {
-    @apply h-2 absolute rounded bg-slate-500;
+    @apply h-2 absolute rounded bg-c-primary-500;
   }
 }
 
