--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -135,10 +135,10 @@ body {
     @apply shadow-[0px_-5px_20px_-5px_rgba(143,205,152,0.7),0px_5px_20px_-5px_rgba(143,205,152,0.7)];
   }
   .cart-container__lazy--class {
-    @apply relative rounded-3xl bg-c-primary-400/40 animate-pulse;
+    @apply relative rounded-3xl bg-c-surface-400/40 animate-pulse;
   }
   .cart__lazy--class {
-    @apply h-2 absolute rounded bg-c-primary-500;
+    @apply h-2 absolute rounded bg-c-surface-500;
   }
 }
 
